# distributed-build-system

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  example_build_graph.json  vcpkg.json
benchmarks/: README.md  generate_summary.py  run_benchmarks.sh
coordinator/: CMakeLists.txt  main.cpp
proto/: CMakeLists.txt  build.proto
src/common/: CMakeLists.txt  build_task.cpp  build_task.h  dependency_graph.cpp  dependency_graph.h  hash_utils.cpp  hash_utils.h
src/coordinator/: CMakeLists.txt  fault_tolerance.cpp  fault_tolerance.h  grpc_client_pool.cpp  grpc_client_pool.h  main.cpp  metrics.cpp  metrics.h  redis_client.cpp  redis_client.h  scheduler.cpp  scheduler.h
src/worker/: CMakeLists.txt  build_service_impl.cpp  build_service_impl.h  compiler.cpp  compiler.h  main.cpp  redis_client.cpp  redis_client.h
worker/: main.cpp
